--- a/templates/about.html
+++ b/templates/about.html
@@ -56,22 +56,23 @@
                             <div class="card-body text-white">
                                 <h2>Вардан Варданян</h2>
                                 <h4>PR и связи с общественностью</h4>
-                                <img src="https://sun9-80.userapi.com/impg/iP8n3K12fhCzFNvdLpojLzkEiMQtLwVLPw9DJA/mZ_5V9QVx3c.jpg?size=1200x1600&quality=95&sign=376751303622edd16dd9c37ced3e84d0&type=album" alt="Vard" width="100%">
+                                <img src="https://sun9-80.userapi.com/impg/iP8n3K12fhCzFNvdLpojLzkEiMQtLwVLPw9DJA/mZ_5V9QVx3c.jpg?size=1200x1600&quality=95&sign=376751303622edd16dd9c37ced3e84d0&type=album" alt="Vard" width="100%" height="100%">
                                 <h2>Тимофей Ежов</h2>
                                 <h4>Технический специалист</h4>
-                                <img src="https://sun9-8.userapi.com/impf/HMEjSFTomPHlnW89HJTLB1gjy80V84RvK0736w/3UwkQ2kSzm4.jpg?size=700x452&quality=96&sign=76218c286a8df5939e8c622270a3d40f&type=album" alt="Tima" width="100%">
+                                <img src="https://sun9-8.userapi.com/impf/HMEjSFTomPHlnW89HJTLB1gjy80V84RvK0736w/3UwkQ2kSzm4.jpg?size=700x452&quality=96&sign=76218c286a8df5939e8c622270a3d40f&type=album" alt="Tima" width="100%" height="100%">
                                 <h2>Василий Слабинский</h2>
                                 <h4>Руководитель отдела международной информации</h4>
-                                <img src="https://sun9-48.userapi.com/impg/ycEinqA3TwGOUBNc25t6imRefEK8xH1Tp47mDg/wACWckgeF1o.jpg?size=2560x1707&quality=95&sign=791c2f4dbe89bec5f088d7ba6ffa32a8&type=album" alt="Vasya" width="100%">
+                                <img src="https://sun9-48.userapi.com/impg/ycEinqA3TwGOUBNc25t6imRefEK8xH1Tp47mDg/wACWckgeF1o.jpg?size=2560x1707&quality=95&sign=791c2f4dbe89bec5f088d7ba6ffa32a8&type=album" alt="Vasya" width="100%" height="100%">
                                 <h2>Марк Чащин</h2>
                                 <h4>Креативный директор</h4>
-                                <img src="https://sun9-east.userapi.com/sun9-34/s/v1/if2/2glf3jeci4tx-lYIbvHGC0gRFpnmHdPAIHDsmvak5v0GDr6Xk-Yc6vxzG4nX_qUHfhZNk6dlRonPTUefbAFkPy39.jpg?size=0x0&quality=90&proxy=1&type=video_thumb" alt="Mark" width="100%">
+                                <img src="https://sun9-east.userapi.com/sun9-34/s/v1/if2/2glf3jeci4tx-lYIbvHGC0gRFpnmHdPAIHDsmvak5v0GDr6Xk-Yc6vxzG4nX_qUHfhZNk6dlRonPTUefbAFkPy39.jpg?size=0x0&quality=90&proxy=1&type=video_thumb" alt="Mark" width="100%" height="100%">
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
+
     {% endblock content %}
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
