--- a/templates/home.html
+++ b/templates/home.html
@@ -43,10 +43,28 @@
                         </li>
                     </ul>
                 </div>
-                <a href="/reg">
-                    <button type="button" class="btn btn-dark">Вход/Регистрация</button>
-                </a>
-                 <a class="navbar-brand bg-dark"></a>
+                <div class="d-flex justify-content-end">
+                        {% if request.user.is_authenticated %}
+                            <div class="container justify-content-center">
+                            <div class="row">
+                                <div class="col" style="margin-top: 4%">
+                                    <a style="color: white">{{ user.username }}</a>
+                                </div>
+                                <div class="col">
+                                    <a href="{% url 'logout' %}">
+                                        <button type="button" class="btn btn-dark">Выйти</button>
+                                    </a>
+                                </div>
+                            </div>
+                            </div>
+                        {% else %}
+                            <a href="/login">
+                                <button type="button" class="btn btn-dark">Вход/Регистрация</button>
+                            </a>
+                        {% endif %}
+                </div>
+
+                <a class="navbar-brand bg-dark"></a>
                 <form method="get">
                     <select class="form-select bg-dark border-dark" style="color: white">
                         <option selected>Сортировать от:</option>
@@ -57,7 +75,8 @@
                 <nav class="navbar">
                     <a class="navbar-brand bg-dark"></a>
                     <form class="form-inline bg-dark" method="get" action="{% url 'search' %}">
-                        <input class="form-control mr-sm-2 bg-dark" style="color: white" type="search" name="q" placeholder="Search"
+                        <input class="form-control mr-sm-2 bg-dark" style="color: white" type="search" name="q"
+                               placeholder="Search"
                                aria-label="Search">
                     </form>
                 </nav>
@@ -74,7 +93,8 @@
                                  style="background-image: linear-gradient(60deg, #29323c 0%, #485563 100%);">
                                 <div class="card-body text-white">
                                     <h2>{{ post.title }}</h2>
-                                    <a class="text-info" href="{% url 'user' post.author.pk %}"><p>Автор поста: <b> {{ post.author }}</b></p></a>
+                                    <a class="text-info" href="{% url 'user' post.author.pk %}"><p>Автор поста:
+                                        <b> {{ post.author }}</b></p></a>
                                     <p>Раздел: <b> {{ post.category }}</b></p>
                                     <p> Дата публикации: <b> {{ post.published_date }}</b></p>
                                     <p>{{ post.body|slice:":500" }}</p>
@@ -102,23 +122,27 @@
             <div class="col justify-content-center">
                 <nav aria-label="Page navigation example">
                     <ul class="pagination justify-content-center">
-                            {% if page_obj.has_previous %}
-                                <li class="page-item"><a class="page-link" href="?page=1">&laquo;</a></li>
-                                <li class="page-item"><a class="page-link" href="?page={{ page_obj.previous_page_number }}" aria-label="Previous"><</a></li>
-                            {% endif %}
-                            {% for p in paginator.page_range %}
+                        {% if page_obj.has_previous %}
+                            <li class="page-item"><a class="page-link" href="?page=1">&laquo;</a></li>
+                            <li class="page-item"><a class="page-link" href="?page={{ page_obj.previous_page_number }}"
+                                                     aria-label="Previous"><</a></li>
+                        {% endif %}
+                        {% for p in paginator.page_range %}
                             <li class="page-item"><a class="page-link" href="?page={{ p }}">{{ p }}</a></li>
-                            {% endfor %}
-                            {% if page_obj.has_next %}
-                                <li class="page-item"><a class="page-link" href="?page={{ page_obj.next_page_number }}">></a></li>
-                                <li class="page-item"><a class="page-link" href="?page={{ page_obj.paginator.num_pages }}">&raquo;</a></li>
-                            {% endif %}
+                        {% endfor %}
+                        {% if page_obj.has_next %}
+                            <li class="page-item"><a class="page-link"
+                                                     href="?page={{ page_obj.next_page_number }}">></a></li>
+                            <li class="page-item"><a class="page-link" href="?page={{ page_obj.paginator.num_pages }}">&raquo;</a>
+                            </li>
+                        {% endif %}
                     </ul>
                 </nav>
             </div>
             <div class="col justify-content-center">
-                <div class="dropdown" >
-                    <button class="btn btn-secondary bg-transparent border-0 dropdown-toggle" type="button" data-bs-toggle="dropdown"
+                <div class="dropdown">
+                    <button class="btn btn-secondary bg-transparent border-0 dropdown-toggle" type="button"
+                            data-bs-toggle="dropdown"
                             aria-expanded="false">
                         Кол-во постов
                     </button>
@@ -131,9 +155,9 @@
             </div>
         </div>
     </div>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
-                integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
-                crossorigin="anonymous"></script>
-    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+            crossorigin="anonymous"></script>
+</div>
 </body>
 </html>
