--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -43,9 +43,6 @@
                         </li>
                     </ul>
                 </div>
-                <a href="/reg">
-                    <button type="button" class="btn btn-dark">Вход/Регистрация</button>
-                </a>
             </div>
         </nav>
     </header>
@@ -58,12 +55,8 @@
                              style="background-image: linear-gradient(60deg, #29323c 0%, #485563 100%);">
                             <div class="card-body text-white">
                                 <h2>{{ post.title }}</h2>
-                                <a class="text-info" href="{% url 'user' post.author.pk %}"><p>Автор поста: <b> {{ post.author }}</b></p></a>
-                                <p>Раздел: <b> {{ post.category }}</b></p>
+                                <p>Автор поста: <b> {{ post.author }}</b></p>
                                 <p>{{ post.body }}</p>
-                                <a href="javascript:window.history.back();">
-                                        <button type="button" class="btn btn-primary">Назад</button>
-                                </a>
                             </div>
                         </div>
                     </div>
