--- a/templates/users.html
+++ b/templates/users.html
@@ -43,31 +43,79 @@
                         </li>
                     </ul>
                 </div>
-                <a href="/reg">
-                    <button type="button" class="btn btn-dark">Вход/Регистрация</button>
-                </a>
+                <div class="d-flex justify-content-end">
+                        {% if request.user.is_authenticated %}
+                            <div class="container justify-content-center">
+                            <div class="row">
+                                <div class="col" style="margin-top: 4%">
+                                    <a style="color: white">{{ request.user.username }}</a>
+                                </div>
+                                <div class="col">
+                                    <a href="{% url 'logout' %}">
+                                        <button type="button" class="btn btn-dark">Выйти</button>
+                                    </a>
+                                </div>
+                            </div>
+                            </div>
+                        {% else %}
+                            <a href="/login">
+                                <button type="button" class="btn btn-dark">Вход/Регистрация</button>
+                            </a>
+                        {% endif %}
+                </div>
+                <nav class="navbar">
+                    <a class="navbar-brand bg-dark"></a>
+                    <form class="form-inline bg-dark" method="get" action="{% url 'search' %}">
+                        <input class="form-control mr-sm-2 bg-dark" style="color: white" type="search" name="q"
+                               placeholder="Search"
+                               aria-label="Search">
+                    </form>
+                </nav>
             </div>
         </nav>
     </header>
     {% block content %}
         <div style="margin-top: 1%">
-                <div class="container-fluid">
-                    <div class="row align-items-start">
-                        <div class="col">
-                            <div class="bg-image card shadow-1-strong"
-                                 style="background-image: linear-gradient(60deg, #29323c 0%, #485563 100%);">
-                                <div class="card-body text-white">
-                                    <h2>{{ user.username }}</h2>
-                                    <p>Был в сети: <b> {{ user.last_login }}</b></p>
-                                    <a href="javascript:window.history.back();">
-                                        <button type="button" class="btn btn-primary">Назад</button>
-                                    </a>
-                                </div>
+            <div class="container-fluid">
+                <div class="row align-items-start">
+                    <div class="col">
+                        <div class="bg-image card shadow-1-strong" style="background-image: linear-gradient(60deg, #29323c 0%, #485563 100%);">
+                            <div class="card-body text-white">
+                                <h2>{{ user.username }}</h2>
+                                <p>Был в сети: <b> {{ user.last_login }}</b></p>
+                                <a href="javascript:window.history.back();">
+                                    <button type="button" class="btn btn-primary">Назад</button>
+                                </a>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
+        </div>
+        {% for posts in post %}
+            {% if posts.author == user %}
+                <div style="margin-top: 1%">
+                    <div class="container-fluid">
+                        <div class="row align-items-start">
+                            <div class="col">
+                                <div class="bg-image card shadow-1-strong"
+                                     style="background-image: linear-gradient(60deg, #29323c 0%, #485563 100%);">
+                                    <div class="card-body text-white">
+                                            <h2>{{ posts.title }}</h2>
+                                            <p>Раздел: <b> {{ posts.category }}</b></p>
+                                            <p> Дата публикации: <b> {{ posts.published_date }}</b></p>
+                                            <p>{{ posts.body|slice:":500" }}</p>
+                                            <a href="{% url 'post_detail' posts.pk %}">
+                                                <button type="button" class="btn btn-primary">Подробнее</button>
+                                            </a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            {% endif %}
+        {% endfor %}
     {% endblock content %}
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
                 integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
